--- a/html/common.html
+++ b/html/common.html
@@ -3,7 +3,7 @@
   <button id="nav-toggle" aria-label="Toggle navigation">☰</button>
   <nav id="main-nav" class="main-nav">
     <ul>
-      <li><a href="/html/index.html">Home</a></li>
+      <li><a href="/index.html">Home</a></li>
       <li><a href="/html/cources.html">Courses</a></li>
       <li><a href="/html/learn.html">Learn</a></li>
       <li><a href="/html/practice.html">Practice</a></li>
