--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
     
-    <link rel="stylesheet" href="/style/common.css" />
+    <link rel="stylesheet" href="style/common.css" />
   </head>
   <body>
     <main>
@@ -43,7 +43,7 @@
 
       <footer id="site-footer"></footer>
     </main>
-    <script src="/script/common.js"></script>
-    <script src="/script/index.js"></script>
+    <script src="script/common.js"></script>
+    <script src="script/index.js"></script>
   </body>
 </html>
